--- a/news-website/src/main/resources/templates/about.html
+++ b/news-website/src/main/resources/templates/about.html
@@ -67,9 +67,9 @@
     
     <div class="dropdown-container container-xl">
 
-      <form id="searchForm" action="http://html.coolorize.com/magazinize/1.0.0/newspaper/search-results.html" method="get" class="form-inline flex-nowrap w-300px">
+      <form id="searchForm" th:action="@{/searchNews}" method="post" class="form-inline flex-nowrap w-300px">
         <div class="input-group w-100">
-          <input type="text" name="search" class="form-control form-control-sm" placeholder="Keyword">
+          <input type="text" name="keyword" class="form-control form-control-sm" placeholder="Keyword">
           <div class="input-group-append">
             <button type="submit" class="btn btn btn-primary btn-sm"><i class="fas fa-search"></i></button>
           </div>
