Update User Profile

--- a/news-website/src/main/resources/templates/common/header.html
+++ b/news-website/src/main/resources/templates/common/header.html
@@ -96,7 +96,7 @@ xmlns:sec="http://www.w3.org/1999/xhtml">
               </li>
               
               <li class="nav-item">
-                <a sec:authorize="isAuthenticated()" class="text-uppercase btn btn-link btn-sm my-1" th:href="@{/myProfile"><span class="d-inline-block" sec:authentication="name"></span></a>
+                <a sec:authorize="isAuthenticated()" class="text-uppercase btn btn-link btn-sm my-1" th:href="@{/newUser?token=}+${passwordResetToken.token}"><span class="d-inline-block" sec:authentication="name"></span></a>
               </li>
               
 
