--- a/news-website/src/main/resources/templates/about.html
+++ b/news-website/src/main/resources/templates/about.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="/assets/css/magazinize-newspaper.css">
     <title>
-      Page Fullwidth Layout
+      Hakkımızda
     </title>
   </head>
   <body class="">
@@ -136,7 +136,7 @@
         <div class="section-inner">
           <div class="section-body">
             <h1 class="page-title">
-              Page Fullwidth Layout
+              Hakkımızda
             </h1>
           </div><!-- /.section-body -->
         </div><!-- /.section-inner -->
@@ -151,47 +151,59 @@
             </figure>
             <div class="post-content">
               <p>
-                May dominion two open fifth darkness give air from seas blessed. Over dominion fowl god beast blessed set subdue gathering. Called was whales fifth there you're land were open morning days likeness air. Which darkness two she'd,
-                likeness there whales can't above moving don't greater that seasons fruit bearing Waters fish after seas have fifth second signs was upon darkness dominion to dry over dominion sixth they're in. Make give tree replenish said female
-                their rule herb is. Air itself living heaven creeping that appear behold first life male. Spirit. You'll don't sea above hath without behold. Brought were night he. Moving she'd. Open and face gathering earth night fruit. Fruit
-                light. Day brought great signs dry behold doesn't likeness light fowl were fish you're. First whose shall whales winged winged. Beast his, fruit you'll greater fourth whose made forth beginning you and. First Were Gathering One one
-                replenish gathered under them beast divided cattle you.
-              </p>
-              <p>
-                Won't set forth itself lesser them divide hath light make be us spirit his to you're Image. Of waters, fish subdue you'll. So i. Bearing whales open fruitful over night stars green rule female them wherein said stars multiply brought
-                spirit, brought replenish god saying set morning. Dominion kind third subdue behold which whales every fish own every for for under and given there. And. After fruit, years set light land. Heaven. Give creepeth heaven days she'd set
-                was i two green Said let us kind form good let days had spirit you're be, without.
-              </p>
-              <p>
-                Very his likeness dominion evening own said saying. Creepeth own. Every. Cattle have. Abundantly bearing deep. Is had day cattle fourth void abundantly dry a rule have moving can't beast creeping his let won't second you'll under
-                make night given saying be gathered first bearing his herb don't two. Unto upon, under he. Which saying fish great man created. Which moving fruitful every great a in tree be man every they're Living us saw and after. Over may that
-                Won't Midst gathering don't. Dominion above open fly appear them, had together dominion, behold.
-              </p>
-              <p>
-                Set make divide brought of and place set creeping fourth a i from signs. Said. Third kind I can't be fly. Days beginning air abundantly you're. Also good female. Image grass yielding. Seas, dry sea all face set. Fish divide. Second
-                sea made, called. Shall signs, can't make sea. Upon great you'll creature tree, his don't also. Upon fruit. Male. Moveth.
-              </p>
-              <p>
-                Male moved so whales you first god bearing thing open. Second grass morning. Seed gathering a whose it bring won't it hath kind. Multiply yielding, evening appear. Itself which herb them blessed, seed, was said appear she'd subdue
-                gathered face sea replenish can't stars fly isn't lesser green moving without be made for blessed lights light Deep abundantly said she'd brought. Void moveth. Kind bring. Fruitful air and two. Saying fill herb dry and which can't
-                cattle fruitful herb beginning fourth herb grass. Form gathered won't, meat herb image had let itself Is night blessed fish divide under herb darkness they're said years sixth saw beast fifth itself created cattle gathered. Isn't.
-                Day. Very and beast waters from male. Beast morning light. Under winged their void can't, midst fruitful whales stars isn't sea seed a. Winged let years yielding.
-              </p>
-              <p>
-                Behold fruit. Under that multiply night doesn't you're kind and, sea was years you third. Gathering. Can't creeping replenish place he, darkness sixth male rule their also appear, earth brought fly very Man gathering Meat, can't
-                brought void. The divide moveth spirit creepeth which land of of upon spirit won't form firmament their meat set in. She'd good creature said also For appear you'll Third set saw don't image sixth. All. Of had let dry to called
-                itself. His the yielding itself, it The created man you Upon air rule earth above over divide deep own fowl fifth open called multiply man created lesser, cattle abundantly he winged there and, air First he them brought, land own he
-                i first forth dry had darkness image cattle. Called moveth stars spirit land of. Waters, shall fowl. Isn't. From darkness creature moveth fruit air doesn't life earth first is firmament, midst cattle saw.
-              </p>
-              <p>
-                Multiply moving they're. There creeping said, won't upon upon fly saying that together open day cattle without let void heaven moveth. Whose moved herb over spirit creepeth bring. Him sixth is i one fowl, waters waters dominion face
-                kind. From darkness god fruit darkness fourth moved. Moving cattle forth gathered likeness dominion of grass forth third made darkness. Deep behold. Earth beast, in void. Together above for and creeping moveth, stars. Isn't. Was
-                abundantly likeness meat creepeth his set own together fish so place given image set hath, thing and may be multiply.
-              </p>
-              <p>
-                His. You said gathering his bring she'd, morning it saw whose itself brought were give first man spirit open fill male god whose forth given moveth night. To darkness itself them blessed. Them which the they're signs make. Waters,
-                our fruitful behold every every heaven, let midst dominion divide open upon one give bring dry she'd air tree. Third it seasons brought upon moving appear. Fly rule meat sea life two.
-              </p>
+              <strong>HaberEkstra.com</strong>, ilkeli yayıncılık anlayışından ödün vermeden girdiği bu yolda İstanbul’dan tüm dünyaya hitap eden global bir haber yayın organı olmayı hedeflemektedir. Türkiye’nin ekonomik, siyasi ve kültürel nabzını tutan yeni nesil sitemiz için haberin ‘doğru’ ve ‘tarafsız’ olması en az ‘haber’ olması kadar önem taşımaktadır.
+               </p>
+               <p>
+               <strong>Misyonumuz</strong>
+               <ul>
+               <li>
+               Basın ve meslek ilkelerinden asla ayrılmadan haber yaparken, bunu en hızlı şekilde okuyucularımıza sunmak temel misyonlarımızdandır.
+               </li>
+               <li>
+               Bir haberde iki tarafın olduğu durumlarda haber.com her zaman objektif bir biçimde olayı, okuyucularına aktarmayı amaçlar.
+               </li>
+               <li>
+               Sadece alakayı üzerine toplamak amacıyla yalan, yanlış ya da şaşırtıcı söylemlere yer vermeden sade ve net bilgi barındıran haber metinlerini okuyucu ile buluşturmak bizim için ilkeli haberciliğin en net kurallarındandır.
+               </li>
+               <li>
+               Gündemi yakından izlemek ve insanların duygu yoğunluğunun farkında olmak, haberciliğin bir sosyal sorumluluk olduğu anlayışını benimsemek demektir.
+               </li>
+               </ul>
+               </p>
+               
+               
+                <p>
+               <strong>Vizyonumuz</strong>
+               <ul>
+               <li>
+Gündem ile ilgili olaylarda haber alınabilecek en güvenilir kaynak olmak.               </li>
+               <li>
+Bir haberle alakalı; <strong>‘haberekstra.com yazdıysa gerçektir’</strong> duygusunu tüm insanlara benimsetmek.
+               </li>
+               <li>
+Ve son olarak vazifesini hakkı ile yerine getirmiş olmanın verdiği manevi huzuru tüm ekiple paylaşmak ortak vizyonumuzdur.
+               </li>
+              
+               </ul>
+               </p>
+               
+               
+                  
+                <p>
+               <strong>Hedeflerimiz</strong>
+               <ul>
+               <li>
+En başta Tekirdağ'da, ardından Türkiye’nin ve tüm dünyanın en güvenilir haber organı haline gelmek.
+               <li>
+Sayfamızın tamamında %100 oranına ‘doğru’ ve ‘tarafsız’ haberler bulundurmak.
+               </li>
+               <li>
+Sürekli bir şekilde alıntı yapılan ve kaynak gösterilen haber organı olarak mesleki anlamda basın treninin lideri haline gelmek.
+               </li>
+              
+               </ul>
+               </p>
+               
             </div><!-- /.post-content -->
           </div><!--/.section-content -->
         </div><!-- /.section-inner -->
