--- a/adminportal/src/main/resources/templates/contactList.html
+++ b/adminportal/src/main/resources/templates/contactList.html
@@ -34,6 +34,7 @@
 											<th>Name</th>
                                             <th>Email</th>
                                             <th>Subject</th>
+                                            <th>Message</th>
                                             <th>Posting Date</th>
 											<th>Operation</th>
                                          
@@ -48,6 +49,7 @@
                                               <td th:text="${contact.name}"></td>
                                                 <td th:text="${contact.email}"></td>
                                                        <td th:text="${contact.subject}"></td>
+                                                        <td th:text="${contact.message}"></td>
                                                               <td th:text="${contact.postingDate}"></td>
                                                  
                                                      <td>
